--- a/index.html
+++ b/index.html
@@ -26,27 +26,7 @@
             }
         }
     </script>
-    <style>
-        body {
-            background-color: #0f172a;
-            color: #e2e8f0;
-            background-image: 
-                radial-gradient(at 0% 0%, rgba(56, 189, 248, 0.15) 0px, transparent 50%),
-                radial-gradient(at 100% 0%, rgba(168, 85, 247, 0.15) 0px, transparent 50%);
-            background-attachment: fixed;
-        }
-        .glass-card {
-            background: rgba(30, 41, 59, 0.4);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-        .text-gradient {
-            background: linear-gradient(to right, #38bdf8, #a855f7);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased selection:bg-accent selection:text-dark">
 
