--- a/index.html
+++ b/index.html
@@ -242,6 +242,104 @@
         </div>
     </section>
 
+    <section id="contact-sheet" class="py-24">
+    <div class="max-w-5xl mx-auto px-4">
+
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">
+            Get In <span class="text-gradient">Touch</span>
+        </h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+
+            <!-- Left Info Panel -->
+            <div class="glass-card p-10 rounded-2xl">
+                <h3 class="text-2xl font-semibold mb-6 text-white">
+                    Let’s build something great 🚀
+                </h3>
+
+                <p class="text-slate-400 mb-8 leading-relaxed">
+                    I’m open to new opportunities, collaborations, and freelance projects.
+                    Feel free to reach out if you have an idea or just want to connect.
+                </p>
+
+                <div class="space-y-5 text-slate-300">
+
+                    <div class="flex items-center gap-4">
+                        <i class="fas fa-envelope text-accent text-lg"></i>
+                        <span>abhijithpv7777@gmail.com</span>
+                    </div>
+
+                    <div class="flex items-center gap-4">
+                        <i class="fas fa-phone text-accent text-lg"></i>
+                        <span>+91 7907545183</span>
+                    </div>
+
+                    <div class="flex items-center gap-4">
+                        <i class="fas fa-location-dot text-accent text-lg"></i>
+                        <span>Kannur, Kerala, India</span>
+                    </div>
+
+                </div>
+
+                <div class="mt-10 flex gap-6 text-2xl text-slate-400">
+                    <a href="https://github.com/abhijith-7777" class="hover:text-white transition">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/abhijithpv7777" class="hover:text-blue-500 transition">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="mailto:abhijithpv7777@gmail.com" class="hover:text-red-400 transition">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Right Contact Form -->
+            <div class="glass-card p-10 rounded-2xl">
+                <form class="space-y-6">
+
+                    <div>
+                        <label class="block text-sm mb-2 text-slate-400">Your Name</label>
+                        <input
+                            type="text"
+                            placeholder="Enter your name"
+                            class="w-full bg-slate-800 border border-slate-700 rounded-lg px-4 py-3 text-sm text-white focus:outline-none focus:border-accent"
+                        />
+                    </div>
+
+                    <div>
+                        <label class="block text-sm mb-2 text-slate-400">Email Address</label>
+                        <input
+                            type="email"
+                            placeholder="Enter your email"
+                            class="w-full bg-slate-800 border border-slate-700 rounded-lg px-4 py-3 text-sm text-white focus:outline-none focus:border-accent"
+                        />
+                    </div>
+
+                    <div>
+                        <label class="block text-sm mb-2 text-slate-400">Message</label>
+                        <textarea
+                            rows="5"
+                            placeholder="Write your message..."
+                            class="w-full bg-slate-800 border border-slate-700 rounded-lg px-4 py-3 text-sm text-white focus:outline-none focus:border-accent resize-none"
+                        ></textarea>
+                    </div>
+
+                    <button
+                        type="submit"
+                        class="w-full py-3 rounded-full bg-gradient-to-r from-accent to-primary text-white font-semibold hover:shadow-lg hover:shadow-accent/30 transition transform hover:-translate-y-0.5"
+                    >
+                        Send Message
+                    </button>
+
+                </form>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
     <footer id="contact" class="border-t border-slate-800 bg-dark py-12">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <h2 class="text-3xl font-bold mb-6">Let's work together.</h2>
