--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 Specializing in Python, Flutter, and building scalable web applications.
             </p>
             <div class="flex justify-center gap-4">
-                <a href="#projects" class="px-8 py-3 rounded-full border border-slate-600 hover:border-accent hover:text-accent transition duration-300">
-                    View Work
+                <a href="ABHIJITH-RESUME.pdf" download class="px-8 py-3 rounded-full border border-slate-600 hover:border-accent hover:text-accent transition duration-300">
+                    Download CV
                 </a>
                 <a href="#contact" class="px-8 py-3 rounded-full bg-slate-800 hover:bg-slate-700 transition duration-300">
                     Contact Me
