--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
                         <div class="flex justify-between items-start mb-4">
                             <h3 class="text-2xl font-bold text-white">Online Rental System</h3>
                             <div class="flex space-x-2">
+                                <span class="px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-300 border border-yellow-500/30">Html</span>
+                                <span class="px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-300 border border-yellow-500/30">Css</span>
                                 <span class="px-3 py-1 text-xs rounded-full bg-yellow-500/20 text-yellow-300 border border-yellow-500/30">Python</span>
                                 <span class="px-3 py-1 text-xs rounded-full bg-orange-500/20 text-orange-300 border border-orange-500/30">MySQL</span>
                             </div>
@@ -216,6 +218,33 @@
                         <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-primary transition border border-slate-700">GitHub</span>
                         <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-primary transition border border-slate-700">PostgreSQL</span>
                         <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-primary transition border border-slate-700">Data Visualization</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-primary transition border border-slate-700">Trello</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-primary transition border border-slate-700">Microsoft Office</span>
+                    </div>
+                </div>
+
+                <div class="glass-card p-8 rounded-2xl">
+                    <h3 class="text-xl font-semibold mb-6 flex items-center">
+                        <i class="fas fa-code text-accent mr-3"></i> Technical
+                    </h3>
+                    <div class="flex flex-wrap gap-3">
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Web Development</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">AI Developer</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Web Design</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">IT Support</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">QA Testing</span>
+                    </div>
+                </div>
+
+                <div class="glass-card p-8 rounded-2xl">
+                    <h3 class="text-xl font-semibold mb-6 flex items-center">
+                        <i class="fas fa-code text-accent mr-3"></i> Soft Skills
+                    </h3>
+                    <div class="flex flex-wrap gap-3">
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Problem Solving</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Decision Making</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Troubleshooting</span>
+                        <span class="px-4 py-2 bg-slate-800 rounded-lg text-sm hover:text-accent transition border border-slate-700">Bugs Reporting</span>
                     </div>
                 </div>
             </div>
